--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -7,7 +7,7 @@
   "banner": {
     "greeting": "Hola,",
     "name": "Soy Ivan",
-    "role": "Full Stack Developer"
+    "role": "Frontend Developer"
   },
   "about": {
     "sectionTitle": "Sobre mí.",
